Fix spacing between elements in Register and Login

--- a/src/pages/Login/style.module.css
+++ b/src/pages/Login/style.module.css
@@ -8,7 +8,7 @@
   height: 100vh;
 }
 
-#login > * {
+#login > input {
   margin: 10px 0;
 }
 
