--- a/src/pages/Register/style.module.css
+++ b/src/pages/Register/style.module.css
@@ -8,10 +8,14 @@
   height: 100vh;
 }
 
-#register > * {
+#register > input, p {
   margin: 10px 0;
 }
 
 #submit-button {
   margin: 30px 0;
+}
+
+#error-message {
+  margin-top: 30px;
 }
